[gd_scene load_steps=20 format=3 uid="uid://457pogcnyg3"]

[ext_resource type="Script" uid="uid://dd38n0vu2b2s" path="res://scripts/fireball.gd" id="1_1gl40"]
[ext_resource type="Texture2D" uid="uid://dh6k6375eqmj6" path="res://assets/character_art/Pantheon_Fireball.png" id="1_3s14c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3s14c"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1gl40"]
atlas = ExtResource("1_3s14c")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb14k"]
atlas = ExtResource("1_3s14c")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kba2"]
atlas = ExtResource("1_3s14c")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43lgj"]
atlas = ExtResource("1_3s14c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqoxj"]
atlas = ExtResource("1_3s14c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86oub"]
atlas = ExtResource("1_3s14c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaphm"]
atlas = ExtResource("1_3s14c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi4h5"]
atlas = ExtResource("1_3s14c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyo3q"]
atlas = ExtResource("1_3s14c")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fb5b"]
atlas = ExtResource("1_3s14c")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyqc2"]
atlas = ExtResource("1_3s14c")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pq144"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gl40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb14k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kba2")
}],
"loop": true,
"name": &"explode",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43lgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqoxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86oub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaphm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi4h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyo3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fb5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyqc2")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_1gl40"]
resource_name = "fly"
length = 0.8
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"fly"],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HitBoxArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(1, -1), Vector2(0, -1), Vector2(-2, -1), Vector2(-2, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HitBoxArea:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_3s14c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/HitBoxArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HitBoxArea:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_cb14k"]
resource_name = "explode"
length = 0.6
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"explode"],
"method": &"play"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HitBoxArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HitBoxArea:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(3.8, 3.8), Vector2(5.2, 5.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cb14k"]
_data = {
&"RESET": SubResource("Animation_3s14c"),
&"explode": SubResource("Animation_cb14k"),
&"fly": SubResource("Animation_1gl40")
}

[node name="Fireball" type="CharacterBody2D"]
collision_layer = 128
collision_mask = 4
script = ExtResource("1_1gl40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 513
visibility_layer = 4
z_index = 4
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_3s14c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pq144")
animation = &"explode"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cb14k")
}
autoplay = "fly"

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBoxArea" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_3s14c")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
